# Klyra-Messenger

./: .gitignore  AUTHORSHIP.md  LICENSE  NOTICE  README.md
klyra-desktop/: CONFIG.md  README.md  index.html  package-lock.json  package.json
klyra-desktop/src/: App.css  App.jsx  config.example.json
klyra-desktop/src-tauri/: Cargo.toml  tauri.conf.json
klyra-desktop/src-tauri/src/: main.rs
klyra-desktop/src/assets/sounds/: README.md
klyra-desktop/src/components/: AuthWindow.css  AuthWindow.jsx  ChatClient.css  ChatClient.jsx  CustomTitleBar.css  CustomTitleBar.jsx  GlobalContextMenu.css  GlobalContextMenu.jsx  SettingsMenu.css  SettingsMenu.jsx
klyra-desktop/src/utils/: config.js
klyra-server/: CONFIG.md  README.md  config.example.json  package-lock.json  package.json  server.js  test.html
